<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.MainActivity">

    <EditText
        android:id="@+id/edtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrarUsuario" />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/user_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtUsuario"
        app:layout_constraintStart_toStartOf="@+id/edtUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edtUsuario"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_entrar"
        app:layout_constraintEnd_toEndOf="@+id/edtPass"
        app:layout_constraintStart_toStartOf="@+id/edtPass"
        app:layout_constraintTop_toBottomOf="@+id/edtPass"
        android:onClick="Entrar"
        />

    <CheckBox
        android:id="@+id/chkRecordarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/chk_recordar"
        app:layout_constraintEnd_toEndOf="@+id/btnEntrar"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/btnEntrar"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

    <TextView
        android:id="@+id/txtRecuperarPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_recuperar_password"
        android:onClick="Recuperar"
        app:layout_constraintEnd_toEndOf="@+id/btnEntrar"
        app:layout_constraintStart_toStartOf="@+id/btnEntrar"
        app:layout_constraintTop_toBottomOf="@+id/chkRecordarUsuario" />

    <Button
        android:id="@+id/btnRegistrarUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/registrar_nuevo_usuario"
        android:onClick="registrarUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>