<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fondo_item"
    android:orientation="vertical"
    android:padding="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTaskName"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:text="@string/nombre_tarea"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTaskStatus"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingRight="6dp"
            android:text="@string/estado_tarea_pendiente" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtTaskDetail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:paddingLeft="6dp"
        android:text="@string/detalles_tarea" />
</LinearLayout>